it finally works

--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
   </head>
   <body>
     <div class="container">
-      <div class="walrus-hidden">
-           <p>Let's play peek-a-boo. Click here to see the surprise!</p>
-         </div>
+      <center><h1>Javascript and JQuery Flashcards!</h1></center>
 
-         <div class="walrus-showing">
-           <p>What a cute walrus! Click here to hide her again.</p>
-         </div>
+      <div id="question">
+       <p>Javascript. <span class="clickable">Click here to see what Javascript is!</span></p>
+     </div>
+
+     <div id="answer">
+       <p>Javascript is a nightmare! <span class="clickable">Click here</span> to never hear about it again.</p>
+     </div>
+
+     <div id="question2">
+       <p>Operators. <span class="clickable">click</span> blah blah blah</p>
+     </div>
+
+     <div id="answer2">
+       <p>Operators are ...<span class="cat">Click here</span> to go back to Operators. </p>
+     </div>
+      </div>
     </div>
   </body>
 </html>
